# prod25-adsplatform

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
backend/config/: env.go  env_test.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/internal/handler/: ad.go  advertiser.go  ai.go  campaign.go  client.go  handler.go  image.go  stats.go  time.go
backend/internal/middleware/: advertiser.go  campaign.go  requests_logger.go
backend/tests/: config.yml  pytest.ini  test_01_ping.tavern.yaml  test_02_clients_crud.tavern.yaml  test_03_advertisers_crud.tavern.yaml  test_04_ml_scores.tavern.yaml  test_05_time_advance.tavern.yaml  test_06_campaign_crud.tavern.yaml  test_07_ads_view_click.tavern.yaml  test_07_ads_view_limits.tavern.yaml  test_07_stress_ads.py  test_08_campaign_stats.tavern.yaml  test_09_campaign_images.tavern.yaml  test_10_campaign_moderation.tavern.yaml  test_11_ai_suggestions.tavern.yaml  utils.py
grafana/: Dockerfile  grafana.ini
grafana/dashboards/: ads.json  api_stats.json  llm_answers.json
media/task/: openapi.yaml
nginx/: Dockerfile  backend.conf
schemas/: backend.sql
tg_bot/: .dockerignore  Dockerfile  generate_views.py  main.py  pyproject.toml
tg_bot/admin_bot/: config.py  middlewares.py  misc.py  states.py
tg_bot/admin_bot/handlers/: __init__.py  campaigns.py  campaigns_create.py  change_date.py  register.py  start.py  stats.py
tg_bot/admin_bot/widgets/: start_same_data.py
tg_bot/ads_api/: __init__.py  advertiser.py  models.py  utils.py
(+53 files in other folders)
